[tool.poetry]
name = "zonopt"
version = "0.1.0"
description = "Zonotope optimization"
authors = ["George D. Torres"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
qpsolvers = "^4.0.0"
pydantic = "^2.4.2"
torch = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
