[tool.poetry]
name = "zonopt"
version = "0.1.0"
description = "Zonotope optimization"
authors = ["George D. Torres"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
qpsolvers = "^4.0.0"
pydantic = "^2.4.2"
torch = "^2.2.2"
matplotlib = "^3.9.0"
tqdm = "^4.66.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
